--- a/Update.html
+++ b/Update.html
@@ -1,10 +1,13 @@
 {
 "version": "10.1.1.0",
-"title": "New Update Available",
-"NewVersion": "10.1.1.1",
+"title": "New Update Version 3.0.0",
+"NewVersion": " ",
 "downloadLink": "https://shabidmod.lovestoblog.com",
-"changeLogMessage": " • Fixed all problem and bug  \n\n Added New Cool features",
+"changeLogMessage": " • Source code updated to v10.1.1.1. \n • Added 'Stories' category in Telegram Max Settings \n • Option to hide seen stories. /n • Option to hide channels stories. \n • Option to mark stories as read. \n • Option to view stories without marking as read. \n • Unlock (some) premium features, including:
+> Translate entire chats.
+> Save stories to your phone.
+> Your name does not appear in the viewer list when you watch any story.",
 "negativebtn": "Later",
 "positivebtn": "Update Now",
-"changelogTitle": "  Base        V3.0.0"
+"changelogTitle": "  change new log"
 }
