--- a/Update.html
+++ b/Update.html
@@ -1,7 +1,7 @@
 {
 "version": "10.1.1.0",
 "title": "New Update Version 3.0.0",
-"NewVersion": " ",
+"NewVersion": "3.0.0",
 "downloadLink": "https://shabidmod.lovestoblog.com",
 "changeLogMessage": " • Source code updated to v10.1.1.1. \n • Added 'Stories' category in Telegram Max Settings \n • Option to hide seen stories. /n • Option to hide channels stories. \n • Option to mark stories as read. \n • Option to view stories without marking as read. \n • Unlock (some) premium features, including:
 > Translate entire chats.
