--- a/Update.html
+++ b/Update.html
@@ -1,8 +1,8 @@
 {
-"version": "10.1.1.1",
+"version": "2.91",
 "title": "New Update Version 3.0.0",
 "NewVersion": "3.0.0",
-"downloadLink": "https://shabidmod.lovestoblog.com",
+"downloadLink": "https://t.me/shabidmod",
 "changeLogMessage": " • Source code updated to v10.1.1.1. \n • Added 'Stories' category in Telegram Max Settings \n • Option to hide seen stories. /n • Option to hide channels stories. \n • Option to mark stories as read. \n • Option to view stories without marking as read. \n • Unlock (some) premium features, including: \n > Translate entire chats. \n > Save stories to your phone. \n > Your name does not appear in the viewer list when you watch any story.",
 "negativebtn": "Later",
 "positivebtn": "Update Now",
